[gd_scene load_steps=8 format=3 uid="uid://hsi3um5bitlf"]

[ext_resource type="Script" uid="uid://cma2eqv8k5vi7" path="res://city.gd" id="1_bih7l"]
[ext_resource type="Texture2D" uid="uid://vq45oipyg6p6" path="res://resources/Cityicon .png" id="2_58ubr"]
[ext_resource type="Script" path="res://scenes/extraction_area.gd" id="3_movw8"]
[ext_resource type="FontFile" uid="uid://cbejk781yhf8t" path="res://resources/fonts/PixelFontBundle2_v1_0/ThickPixels.ttf" id="3_rqxma"]

[sub_resource type="CircleShape2D" id="CircleShape2D_58ubr"]
radius = 190.759

[sub_resource type="LabelSettings" id="LabelSettings_movw8"]
font = ExtResource("3_rqxma")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_movw8"]
size = Vector2(16, 16)

[node name="City" type="Area2D" groups=["cities"]]
script = ExtResource("1_bih7l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("2_58ubr")

[node name="ProductionTimer" type="Timer" parent="."]

[node name="DemandTimer" type="Timer" parent="."]

[node name="Extraction_area" type="Area2D" parent="."]
visible = false
script = ExtResource("3_movw8")

[node name="Extraction_Radius" type="CollisionShape2D" parent="Extraction_area"]
shape = SubResource("CircleShape2D_58ubr")

[node name="City_Label" type="Label" parent="."]
offset_left = 17.0
offset_top = -12.0
offset_right = 57.0
offset_bottom = 11.0
text = "CITYNAME"
label_settings = SubResource("LabelSettings_movw8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_movw8")

[connection signal="timeout" from="ProductionTimer" to="." method="_on_production_timer_timeout"]
[connection signal="timeout" from="DemandTimer" to="." method="_on_demand_timer_timeout"]
[connection signal="area_entered" from="Extraction_area" to="." method="_on_extraction_area_area_entered"]
